// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ENV_SIGNER_MODE=false] Render ELSE component 1`] = `
<NoSignerModeComponent>
  <p>
    Component children
  </p>
</NoSignerModeComponent>
`;

exports[`[ENV_SIGNER_MODE=false] Render ELSE empty component 1`] = `
<Fragment>
  <p>
    Component children
  </p>
</Fragment>
`;

exports[`[ENV_SIGNER_MODE=true] Render component 1`] = `<SignerModeComponent />`;

exports[`[ENV_SIGNER_MODE=true] Render component with children 1`] = `
<SignerModeComponent>
  <p>
    Component children
  </p>
</SignerModeComponent>
`;
